// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Choice Normal 1`] = `
<div
  className="choice__Wrapper-sc-1k1omlp-0 bghiPC"
>
  <select
    className="choice__Select-sc-1k1omlp-1 bLBqKy"
    onChange={[Function]}
  >
    <option>
      Option 1
    </option>
    <option>
      Option 2
    </option>
  </select>
</div>
`;

exports[`Storyshots Choices Normal 1`] = `
<div
  className="choices__Container-sc-800kf9-0 hmyeUu"
>
  <span
    className="choices__Text-sc-800kf9-1 eQJQMD"
  >
    I am a
  </span>
  <div
    className="choice__Wrapper-sc-1k1omlp-0 bghiPC"
  >
    <select
      className="choice__Select-sc-1k1omlp-1 bLBqKy"
      onChange={[Function]}
    >
      <option>
        Front End Engineer I
      </option>
      <option>
        Front End Engineer II
      </option>
      <option>
        Lead Front End Engineer
      </option>
      <option>
        Back End Engineer I
      </option>
      <option>
        Back End Engineer II
      </option>
      <option>
        Lead Back End Engineer
      </option>
      <option>
        Customer Success Champion I
      </option>
      <option>
        Customer Success Champion II
      </option>
      <option>
        Lead Customer Success Champion
      </option>
    </select>
  </div>
  <span
    className="choices__Text-sc-800kf9-1 eQJQMD"
  >
    and, for health benefits, I
  </span>
  <div
    className="choice__Wrapper-sc-1k1omlp-0 bghiPC"
  >
    <select
      className="choice__Select-sc-1k1omlp-1 bLBqKy"
      onChange={[Function]}
    >
      <option>
        donʼt
      </option>
      <option>
        do
      </option>
    </select>
  </div>
  <span
    className="choices__Text-sc-800kf9-1 eQJQMD"
  >
    have a spouse / dependents. Iʼve been with Sparksuite for
  </span>
  <div
    className="choice__Wrapper-sc-1k1omlp-0 bghiPC"
  >
    <select
      className="choice__Select-sc-1k1omlp-1 bLBqKy"
      onChange={[Function]}
    >
      <option>
        less than one year
      </option>
      <option>
        one to two years
      </option>
      <option>
        two to three years
      </option>
      <option>
        three to four years
      </option>
      <option>
        more than four years
      </option>
    </select>
  </div>
</div>
`;

exports[`Storyshots Container Normal 1`] = `
<div
  className="container__Container-sc-8aaowj-0 kvuGWV"
/>
`;

exports[`Storyshots Gradient Normal 1`] = `
<div
  className="gradient__Gradient-zihgh-0 dVdwRk"
/>
`;

exports[`Storyshots Header Normal 1`] = `
Array [
  <div
    className="header__Title-vob98y-0 dbnGjZ"
  >
    Sparksuiteʼs Salary Calculator
  </div>,
  <div
    className="header__Subtitle-vob98y-1 jDVMfa"
  >
    Transparent, predictable, & holistic compensation
  </div>,
]
`;

exports[`Storyshots Position description Normal 1`] = `
<div
  className="position-description__Container-sc-1del6k2-0 iCilDm"
>
  A level I front end engineer is just beginning their professional career in front end software engineering and is working toward a strong foundational knowledge of the fundamentals.
</div>
`;
